[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Die.gd" type="Script" id=1]
[ext_resource path="res://images/dice.png" type="Texture" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.95, 0.95, 0.95 )

[node name="Die" type="KinematicBody" groups=["dice"]]
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 3 )

[node name="ForwardRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 2 )
collide_with_areas = true
debug_shape_custom_color = Color( 0, 0, 1, 1 )

[node name="RightRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )
collide_with_areas = true
debug_shape_custom_color = Color( 1, 0, 0, 1 )

[node name="BackRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true
debug_shape_custom_color = Color( 1, 1, 0, 1 )

[node name="LeftRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( -2, 0, 0 )
collide_with_areas = true
debug_shape_custom_color = Color( 0, 1, 1, 1 )

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
